force-app/main/default/objects/Wages_Compensation__c/Wages_Compensation__c.object-meta.xml
<CustomObject>
    <label>Wages &amp; Compensation</label>
    <nameField>
        <displayFormat>WC-{0}</displayFormat>
        <label>Wages &amp; Compensation Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wages &amp; Compensation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>