force-app/main/default/objects/Wages_Compensation__c/fields/Amount_Claimed__c.field-meta.xml
<CustomField>
    <fullName>Amount_Claimed__c</fullName>
    <label>Amount Claimed</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>