force-app/main/default/objects/Wages_Compensation__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>DIR_Case__c</referenceTo>
    <relationshipLabel>Wages &amp; Compensation from Initial Claim</relationshipLabel>
    <relationshipName>Wages_Compensation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>