force-app/main/default/objects/Wages_Compensation__c/fields/Claim_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Period_End_Date__c</fullName>
    <label>Claim Period End Date</label>
    <type>Date</type>
</CustomField>