force-app/main/default/objects/Wages_Compensation__c/validationRules/Type_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_Other</fullName>
    <active>true</active>
    <description>Only allow the Type - Other field to be populated when the Type = Other</description>
    <errorConditionFormula>AND(TEXT( Type__c ) = "Other", ISBLANK( Type_Other__c ))</errorConditionFormula>
    <errorMessage>When selecting a Type = Other, you must enter the description into the Type - Other field.</errorMessage>
</ValidationRule>